[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quest"
version = "0.1.0"
description = "Quantum Energetics Strain Tool – conformational strain evaluation for docked ligands"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pandas>=1.5",
]

[project.scripts]
quest = "quest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quest*"]
